--- a/public/css/home.css
+++ b/public/css/home.css
@@ -2,3 +2,12 @@
     font-size:13px;
     padding: 0 5px;
 }
+
+.home-index {
+    margin-right:10px;
+}
+
+.post-cate {
+    font-size:13px;
+    margin-right:15px;
+}
