--- a/public/css/home.css
+++ b/public/css/home.css
@@ -11,3 +11,17 @@
     font-size:13px;
     margin-right:15px;
 }
+
+.setting-border {
+    width:100%;
+    border-bottom:1px solid red;
+}
+.setting-border h5 {
+    margin:0;
+    padding:0;
+}
+
+.setting-description {
+    font-size:13px;
+    color: #737373
+}
