--- a/public/css/home.css
+++ b/public/css/home.css
@@ -25,3 +25,12 @@
     font-size:13px;
     color: #737373
 }
+
+.delete-div {
+    height:30px;
+    width:100%;
+    background:#317738;
+    padding:5px 0 5px 5px;
+    display: none;
+    color:#FFFFFF;
+}
