--- a/public/css/home.css
+++ b/public/css/home.css
@@ -34,3 +34,19 @@
     display: none;
     color:#FFFFFF;
 }
+
+.info-div {
+    border-top: 1px solid #f3fafc;
+    margin-top:15px;
+    height:60px;
+    padding: 15px 0;
+    text-align: center;
+
+}
+
+.info-span {
+    text-align: center;
+    float:left;
+    display: block;
+    width:70px;
+}
