--- a/public/css/home.css
+++ b/public/css/home.css
@@ -50,3 +50,9 @@
     display: block;
     width:70px;
 }
+
+.info-attention-span {
+    float:left;
+    padding: 0 10px 0 0px;
+    text-align: center;
+}
